fix: form 使用BrandProvider控制label的align

--- a/packages/ui/form/src/index.less
+++ b/packages/ui/form/src/index.less
@@ -111,12 +111,6 @@
             top: 6px;
         }
     }
-
-    .ant-form-item-label {
-        label {
-            width: 100%;
-        }
-    }
 }
 
 @keyframes osui-icon-spin {
